Updated the design. Added faves.

--- a/account-edit-products.html
+++ b/account-edit-products.html
@@ -70,19 +70,21 @@
                 <div class="cards"></div>
             </section>
 
-            <div class="delete-container hidden">
-                <h1>Are you sure you want to delete the product?</h1>
-                <h2>It CANNOT be restored if you delete it.</h2>
-                <button class="danger-btn btn-delete-confirm" style="max-width: 30rem;">Delete the product
-                    forever</button>
-                <button class="btn-delete-cancel" style="max-width: 30rem;">Cancel</button> <br />
-                <span class="message message-delete-success"></span>
-            </div>
-
         </div>
     </div>
 
     <footer></footer>
+
+    <div class="delete-container hidden">
+        <div class="delete-container-inner">
+            <h1>Are you sure you want to delete the product?</h1>
+            <h2>It CANNOT be restored if you delete it.</h2>
+            <button class="danger-btn btn-delete-confirm" style="max-width: 30rem;">Delete the product
+                forever</button>
+            <button class="btn-delete-cancel" style="max-width: 30rem;">Cancel</button> <br />
+            <span class="message message-delete-success"></span>
+        </div>
+    </div>
 
     <script src="js/editProducts.js" type="module"></script>
 
