--- a/faves.html
+++ b/faves.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>nicecream. account - add new product</title>
+    <title>nicecream. faves</title>
     <meta name="description" content="Custom, handmade ice cream.">
 
     <link rel="manifest" href="site.webmanifest">
@@ -54,13 +54,15 @@
     <div class="wrapper">
         <div class="container">
             <div class="admin-banner-container"></div>
-            <section class="add-new-product-container"></section>
+            <section class="products-wrapper faves-container">
+                <div class="cards"></div>
+            </section>
         </div>
     </div>
 
     <footer></footer>
 
-    <script src="js/addNewProduct.js" type="module"></script>
+    <script src="js/faves.js" type="module"></script>
 
 </body>
 
