--- a/menu.html
+++ b/menu.html
@@ -53,19 +53,13 @@
 
     <div class="wrapper">
         <div class="container">
-
             <div class="admin-banner-container"></div>
-
             <div class="menu-input-container"></div>
-
             <div class="loader"></div>
-
-            <section class="products-wrapper">
+            <section class="products-wrapper menu-wrapper">
                 <div class="cards"></div>
             </section>
-
             <section class="products-wrapper featured-products-container"></section>
-
         </div>
     </div>
 
